--- a/DEMO/Basic.html
+++ b/DEMO/Basic.html
@@ -12,15 +12,30 @@
         <h4>basic html page bernardez</h4>
         <h5>basic html page bernardez</h5>
         <h6>basic html page bernardez</h6> <!--Represents the main heading of the document-->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent blandit faucibus sem et aliquam. Curabitur massa dolor, vehicula ut purus at, aliquam faucibus ex. Mauris nunc lorem, auctor a tincidunt quis, venenatis et ligula. Pellentesque iaculis nulla non lectus tincidunt tincidunt. Curabitur auctor mi id purus dapibus, vitae euismod ante molestie. Ut commodo, dolor non rhoncus venenatis, felis sapien rutrum sapien, ac egestas lectus arcu ultricies augue. Nulla mattis venenatis suscipit. Duis tincidunt quam metus, sit amet tempus purus blandit sit amet. Suspendisse sagittis velit lorem, nec venenatis elit malesuada a. Cras pellentesque lacus turpis, in sagittis lorem imperdiet ut. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed in facilisis purus. Proin id sem quis leo ultricies tristique. Nam porttitor velit orci, eget congue purus varius eu. Nam orci tortor, luctus consequat maximus sed, tincidunt eget massa. Integer mattis eleifend tempor.
-
-Praesent pulvinar metus non tincidunt pharetra. Vestibulum nec neque sed magna tempor egestas sed et lectus. Nulla facilisi. Pellentesque ullamcorper semper luctus. Ut ac commodo felis, at tristique ex. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc accumsan dignissim augue, non venenatis erat pretium quis. Duis cursus a mauris vel tincidunt. Nulla fringilla vestibulum eros, vel gravida ipsum placerat sit amet. Fusce feugiat nisi urna, id mattis purus consectetur et. Sed rutrum, enim ut tincidunt tincidunt, ipsum nisi pharetra leo, sed lobortis ex lacus ac dui. Donec erat arcu, bibendum at lacinia quis, ultrices in lectus. Maecenas semper sit amet orci eget euismod. Integer porta finibus libero in condimentum.
-
-In hac habitasse platea dictumst. Suspendisse convallis nibh quis iaculis accumsan. Morbi id tincidunt metus. In et dapibus nisl. Maecenas condimentum sit amet nulla vel auctor. Ut vulputate tellus nisi, nec gravida enim fringilla sit amet. Sed ac vulputate nibh. Sed finibus laoreet arcu. Sed quis posuere nisl, eget varius nunc. Mauris a diam hendrerit, consequat nisl non, interdum velit. Nam urna tellus, aliquam eget ipsum porta, ullamcorper aliquam tortor. Nullam eu purus quis sem porttitor maximus in vel nunc. Maecenas ut ultrices est.</p> <!--Represents a paragraph of text-->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent blandit faucibus sem et aliquam. Curabitur massa dolor, vehicula ut purus at, aliquam faucibus ex. Mauris nunc lorem, auctor a tincidunt quis, venenatis et ligula. Pellentesque iaculis nulla non lectus tincidunt tincidunt. Curabitur auctor mi id purus dapibus, vitae euismod ante molestie. Ut commodo, dolor non rhoncus venenatis, felis sapien rutrum sapien, ac egestas lectus arcu ultricies augue. Nulla mattis venenatis suscipit. Duis tincidunt quam metus, sit amet tempus purus blandit sit amet. Suspendisse sagittis velit lorem, nec venenatis elit malesuada a. Cras pellentesque lacus turpis, in sagittis lorem imperdiet ut. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed in facilisis purus. Proin id sem quis leo ultricies tristique. Nam porttitor velit orci, eget congue purus varius eu. Nam orci tortor, luctus consequat maximus sed, tincidunt eget massa. Integer mattis eleifend tempor.</p> <!--Represents a paragraph of text-->
 <h3>Grocery list</h3>
+<ol>
+    <li>Fruits</li>
+    <ul>
+        <li>Bananas</li>
+        <li>carrots</li>
+    </ul>
+    <li>Vegetables</li>
+    <ul>
+        <li>Brocolli</li>
+        <li>Pechay</li>
+        <li>Sitaw</li>
+    </ul>
+</ol>
 <ol type = "A">
     <li>Apples</li> <!--Represents an item in an ordered list-->
     <li>Bananas</li>
     <li>Carrots</li>
 </ol>
-<ul><!--type = "square" or type + "circle"</ul>
+<ul><!--type = "square" or type + "circle" -->
+    <li>Apples</li> <!--Represents an item in an unordored list-->
+    <li>Bananas</li>
+    <li>Carrots</li>
+</ul>
+</body>
+</html>
