--- a/Activity1A.html
+++ b/Activity1A.html
@@ -30,8 +30,8 @@
         <li>Partnerships for the Goals</li>
     </ol>
     
-    <h3>Goal 4: Quality Education</h3>
-    <p>Quality education promotes lifelong learning opportunities for all.</p>
+    <h3>Goal 8: Decent Work and Economic Growth</h3>
+    <p>Decent Work and Economic Growth.</p>
     
     <h4>Targets:</h4>
     <ul>
