--- a/DEMO/BernardezResume.html
+++ b/DEMO/BernardezResume.html
@@ -9,7 +9,7 @@
         initial-scale=1.0">
         <title>Dolipas-Resume</title>
     </head>
-    <body bgcolor="7eb1ff">
+    <body bgcolor="aa6657">
         <!--header-->
         <header>
             <style>
@@ -147,7 +147,7 @@
                             <tr>
                                 <td>
                                     <p>Basketball</p>
-                                    <p>Badminton</p>
+                                    <p>Billiards</p>
                                 </td>
                             </tr>
             </table>
