--- a/DEMO/BernardezResume.html
+++ b/DEMO/BernardezResume.html
@@ -7,7 +7,7 @@
         <meta name="viewport"
         content="width=device=width,
         initial-scale=1.0">
-        <title>Dolipas-Resume</title>
+        <title>Bernardez-Resume</title>
     </head>
     <body bgcolor="aa6657">
         <!--header-->
