--- a/Bernardez_Exer3.html
+++ b/Bernardez_Exer3.html
@@ -1,145 +1,173 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+    <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Tables Laboratory Activity 3a</title>
+        <meta name="viewport" content=" width=device-width,initial-scale=1.0">
+        <body bgcolor="#white" >
+    <title>Tables</title>
 </head>
-<body>
-    <h2>Table A</h2>
-    <table border="1">
-        <tr>
-            <td>A</td>
-            <td>B</td>
-            <td>C</td>
-        </tr>
-        <tr>
-            <td>D</td>
-            <td>E</td>
-            <td>F</td>
-        </tr>
-    </table>
-    <h2>Table B</h2>
-    <table border="1">
-        <tr>
-            <td>A</td>
-            <td>D</td>
-        </tr>
+<body bgcolor="9123">
 
-        <tr>
-            <td>B</td>
-            <td>E</td>
-        </tr>
+<table>
+    <tr>
+        <td width="33%" valign="top" style="padding-right: 10px;">
+            <table border="1px" width="100%">
+                <tr>
+                    <td>A</td>
+                    <td align="center">B</td>
+                    <td align="right">C</td>
+                </tr>
+                <tr>
+                    <td>D</td>
+                    <td align="center">E</td>
+                    <td align="right">F</td>
+                </tr>
+            </table>
+            <br>
+            <br>
+            <b>Table A</b>
+        </td>
+        <td width="29%" valign="top" style="padding-right: 10px;">
+            <table width="100%" border="8px" align="center">
+                    <tr>
+                        <td>A</td>
+                        <td align="right">D</td>
+                    </tr>
+                    <tr>
+                        <td>B</td>
+                        <td align="right">E</td>
+                    </tr>
+                    <tr>
+                        <td>C</td>
+                        <td align="right">F</td>
+                    </tr>
+            </table>
+            <b>Table B</b>
+        </td>
+        <td width="33%" valign="top">
+            <table width="100%" border="1px">
+                    <tr>
+                        <td colspan="3"><b>Title goes here</b></td>
+                    </tr>
+                    <tr>
+                        <td>A</td>
+                        <td align="center">C</td>
+                        <td align="right">E</td>
+                    </tr>
+                    <tr>
+                        <td>B</td>
+                        <td align="center">D</td>
+                        <td align="right">F</td>
+                    </tr>
+            </table>
+            <b>Table C</b>
+        </td>
+    </tr>
+</table>
 
-        <tr>
-            <td>C</td>
-            <td>F</td>
-        </tr>
-    </table>
-    <h2>Table C</h2>
-    <table border="1">
-        <tr>
-            <th colspan="3">Title goes here</th>
-        </tr>
-        <tr>
-            <td>A</td>
-            <td>C</td>
-            <td>E</td>
-        </tr>
-        <tr>
-            <td>B</td>
-            <td>D</td>
-            <td>F</td>
-        </tr>
-    </table>
-    <h2>Table E</h2>
-    <table border="1">
-        <tr>
-            <th colspan="2">Title goes here</th>
-        </tr>
-        <tr>
-            <td>A</td>
-            <td>D</td>
-        </tr>
-        <tr>
-            <td>B</td>
-            <td>E</td>
-        </tr>
-        <tr>
-            <td>C</td>
-            <td>F</td>
-        </tr>
-    </table>
-    <h2>Table F</h2>
-    <table border="1">
-        <tr>
-            <th rowspan="4">Title <br>goes <br>here</th>
-            <td>A</td>
-            <td>D</td>
-        </tr>
-        <tr>
-            <td>B</td>
-            <td>E</td>
-        </tr>
-        <tr>
-            <td>C</td>
-            <td>F</td>
-        </tr>
-    </table>
-    <h2>Table G</h2>
-    <table border="1">
-        <tr>
-            <th colspan="2">Title goes here</th>
-        </tr>
-        <tr>
-            <td>A</td>
-            <td>B</td>
-        </tr>
-        <tr>
-            <td colspan="2">C</td>
-        </tr>
-        <tr>
-            <td>D</td>
-            <td>E</td>
-        </tr>
-        <tr>
-            <td>F</td>
-            <td>G</td>
-        </tr>
-        <tr>
-            <td>H</td>
-            <td>I</td>
-        </tr>
-    </table>
-    <h2>Table H</h2>
-    <table border="1">
-        <tr>
-            <th colspan="4">Title goes here</th>
-        </tr>
-        <tr>
-            <td>A</td>
-            <td>B</td>
-            <td>C</td>
-            <td>D</td>
-        </tr>
-        <tr>
-            <td>E</td>
-            <td>F</td>
-            <td>G</td>
-            <td>H</td>
-        </tr>
-        <tr>
-            <td>I</td>
-            <td>J</td>
-            <td>K</td>
-            <td>L</td>
-        </tr>
-        <tr>
-            <td>M</td>
-            <td>N</td>
-            <td>O</td>
-            <td></td>
-        </tr>
-    </table>
+<br clear="all">
+
+<table>
+    <tr>
+        <td valign="top" style="padding-right: 10px;">
+            <table width="70%" height="50%" border="1px">
+                    <tr>
+                        <td rowspan="3" align="center"><b>Title goes here</b></td>
+                        <td align="left">A</td>
+                        <td align="right">D</td>
+                    </tr>
+                    <tr>
+                        <td align="left">B</td>
+                        <td align="right">E</td>
+                    </tr>
+                    <tr>
+                        <td align="left">C</td>
+                        <td align="right">F</td>
+                    </tr>
+            </table>
+            <br>
+            <br>
+            <b><p align="center">Table E</p></b>
+        </td>
+        <td width="50%" valign="top">
+            <table width="100%" cellpadding="20px" border="1px">
+                    <tr>
+                        <td rowspan="3" align="center"><b>Title goes here</b></td>
+                        <td align="center">A</td>
+                        <td align="center">D</td>
+                    </tr>
+                    <tr>
+                        <td align="center">B</td>
+                        <td align="center">E</td>
+                    </tr>
+                    <tr>
+                        <td align="center">C</td>
+                        <td align="center">F</td>
+                    </tr>
+            </table>
+            <b><p align="center">Table F</p></b>
+        </td>
+    </tr>
+</table>
+
+<br clear="all">
+
+<table>
+    <tr>
+        <td width="50%" valign="top" style="padding-right: 10px;">
+            <table width="100%" cellpadding="10px" border="1px" cellspacing="30px">
+                <tr>
+                    <td rowspan="3" align="left" font-size="20px"><b>Title goes here</b></td>
+                    <td>A</td>
+                    <td align="right">D</td>
+                </tr>
+                <tr>
+                    <td>B</td>
+                    <td align="right">E</td>
+                </tr>
+                <tr>
+                    <td>C</td>
+                    <td align="right">F</td>
+                </tr>
+            </table>
+            <b><p align="center">Table G</p></b>
+        </td>
+        <td width="40%" height="70%" valign="top">
+            <table width="70%" height="70%" border="1px">
+                    <tr>
+                        <td colspan="3"><b>Title goes here</b></td>
+                        <td align="center">A</td>
+                        <td align="right">B</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="3" align="left">C</td>
+                        <td align="center">D</td>
+                        <td align="center">E</td>
+                        <td align="center">F</td>
+                        <td align="right">G</td>
+                    </tr>
+                    <tr>
+                        <td align="center">H</td>
+                        <td colspan="2" align="center">I</td>
+                        <td rowspan="2" align="right"><br>J</td>
+                    </tr>
+                    <tr>
+                        <td align="center">K</td>
+                        <td align="center">L</td>
+                        <td align="center">M</td>
+                    </tr>
+                    <tr>
+                        <td align="right">N</td>
+                        <td colspan="4" align="center">O</td>
+                    </tr>
+            </table>
+            <b><p align="center">Table H</p></b>
+        </td>
+    </tr>
+</table>
+
+<br>
+
 </body>
 </html>
