Bernardez_Exer3.html

--- a/Bernardez_Exer3.html
+++ b/Bernardez_Exer3.html
@@ -7,7 +7,7 @@
         <body bgcolor="#white" >
     <title>Tables</title>
 </head>
-<body bgcolor="9123">
+<body bgcolor="#white">
 
 <table>
     <tr>
