--- a/Activity1A.html
+++ b/Activity1A.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UN Sustainable Development Goals</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor= "#dc9788">
+<div class="container">
+<body bgcolor= "#0000FF">
     <h1>United Nations Sustainable Development Goals</h1>
     <p>The UN SDGs are 17 global goals aimed at creating a sustainable future.</p>
     
