--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -1,8 +1,11 @@
-!DOCTYPE html> < !--Document declaration -->
-<html lang ="en"> <!-- Root element of the document -->
-<head> <!-- Contains meta-information about document -->
-    <meta charset = "UTF-8" > <!-- Declares the character encoding for the docuent-->
-    <meta name = "viewport" content = "width = device - width, initial-scale = 1.0" > <!--Declares the viewport settings for the document-->
-    <title> basic html page bernardez </title> <!--Declares the title of tue document-->
-    <head>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>CSS page</h2>
+</body>
+</html>
